--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -312,12 +312,5 @@
   "End My Trip": "End My Trip",
   "Vehicle Summary": "Vehicle Summary",
   "Rent Now": "Rent Now",
-  "Guests Responses": "Guests Responses",
-
-  "Popular Cars": "Popular Cars",
-  "Top Host": "Top Host",
-  "Todays Feed": "Today's Feed",
-  "Popular Destination": "Popular Destination",
-  "Start earning today": "Start earning today",
-  "Go for ride": "Go for ride"
+  "Guests Responses": "Guests Responses"
 }
